syntax = "proto3";

package auth_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
// import "google/protobuf/wrappers.proto";


option go_package = "github.com/AndreiAvdko/auth/pkg/auth_v1;auth_v1";

service AuthV1 {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Get(GetRequest) returns (GetResponse);
    rpc Update(UpdateRequest) returns(google.protobuf.Empty);
    rpc Delete(DeleteRequest) returns(google.protobuf.Empty);
}

message User {
    int64 id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    string passwor_confirm = 5;
    bool is_admin = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
}

message CreateRequest {
    string name = 2;
    string email = 3;
    string password = 4;
    string passwor_confirm = 5;
    bool is_admin = 6;
}

message CreateResponse {
    int64 id = 1;
}

message GetRequest {
    int64 id = 1;
}

message GetResponse {
    User user = 1;
}

message UpdateRequest {
    int64 id = 1;
    string name = 2;
    string email = 3;
}

message DeleteRequest {
    int64 id = 1;
}